--- a/src/main/resources/templates/fragments/card-menu.html
+++ b/src/main/resources/templates/fragments/card-menu.html
@@ -7,12 +7,14 @@
     </div>
 
     <div class="flex flex-grow items-center">
-        <button class="hover:bg-gray-600 left-btn">
-            <svg class="w-6 h-6 text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                 width="24" height="24" fill="none" viewBox="0 0 24 24">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="m15 19-7-7 7-7"/>
-            </svg>
+        <button class="left-btn-wrapper">
+            <div class="hover:bg-gray-600 left-btn">
+                <svg class="w-6 h-6 text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                     width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                          d="m15 19-7-7 7-7"/>
+                </svg>
+            </div>
         </button>
 
         <div class="card-container flex flex-wrap relative">
@@ -30,12 +32,14 @@
             </div>
         </div>
 
-        <button class="hover:bg-gray-600 right-btn">
-            <svg class="w-6 h-6 text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                 width="24" height="24" fill="none" viewBox="0 0 24 24">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="m9 5 7 7-7 7"/>
-            </svg>
+        <button class="right-btn-wrapper">
+            <div class="right-btn hover:bg-gray-600">
+                <svg class="w-6 h-6 text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                     width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                          d="m9 5 7 7-7 7"/>
+                </svg>
+            </div>
         </button>
     </div>
 </div>
