--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,7 +3,7 @@
 <!--        <link rel="stylesheet" href="/css/footer.css">-->
     <footer class="footer dark:bg-gray-900 w-[85%] mx-auto">
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-            <div class="sm:flex sm:items-center justify-between">
+            <div class="flex justify-between">
                 <span class="text-lg text-white sm:text-center dark:text-gray-400">
                     © 2025
                     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
@@ -14,14 +14,14 @@
                             color: white;
                         }
                     </style>
-                    <a href="#" class="logo-name hover:underline">
+                    <a href="/home" class="logo-name inline-block">
                         Note-archive
                     </a>
                 </span>
-                <div class="flex mt-4 sm:justify-center sm:mt-0">
+                <div class="flex sm:justify-center sm:mt-0">
                     <ul class="example-2">
                         <li class="icon-content">
-                            <a href="#" aria-label="GitHub" data-social="github">
+                            <a href="https://github.com/Flexolotl553862/Note-archive.git" aria-label="GitHub" data-social="github">
                                 <div class="filled"></div>
                                 <svg
                                         xmlns="http://www.w3.org/2000/svg"
