icon has been added

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/fonts/Poppins.css}">
     <link rel="stylesheet" th:href="@{/css/fonts/Montserrat.css}">
     <link rel="stylesheet" href="/assets/@preline/select/variants.css">
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
     <script src="/js/jquery/dist/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
