--- a/src/main/resources/templates/not-found.html
+++ b/src/main/resources/templates/not-found.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/tv.css}">
     <link rel="stylesheet" th:href="@{/css/fonts/Poppins.css}">
     <link rel="stylesheet" th:href="@{/css/fonts/Montserrat.css}">
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
