--- a/src/main/resources/static/css/card.css
+++ b/src/main/resources/static/css/card.css
@@ -14,7 +14,7 @@
     transition: all 0.2s;
     cursor: pointer;
     /*box-shadow: 0px 0px 5px -1.5px #000;*/
-    background-image: url("../img/3419813.jpg");
+    background-image: url("../img/leaves.jpg");
     background-size: cover;
     height: 10rem;
     width: 16rem;
