--- a/src/main/resources/templates/note-description.html
+++ b/src/main/resources/templates/note-description.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" th:href="@{/css/fonts/Montserrat.css}">
     <link rel="stylesheet" th:href="@{/css/github-markdown.css}">
     <link rel="stylesheet" th:href="@{/css/button.css}">
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
     <script src="/js/jquery/dist/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
