--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="/js/jquery/dist/jquery.min.js"></script>
     <script src="/js/toastify-js/src/toastify.js"></script>
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
