Sidebar has been added

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <div th:fragment="footer">
     <link rel="stylesheet" href="/css/link-buttons.css">
-<!--        <link rel="stylesheet" href="/css/footer.css">-->
+    <link rel="stylesheet" href="/css/footer.css">
     <footer class="footer dark:bg-gray-900 w-[85%] mx-auto">
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="flex justify-between">
@@ -21,7 +21,8 @@
                 <div class="flex sm:justify-center sm:mt-0">
                     <ul class="example-2">
                         <li class="icon-content">
-                            <a href="https://github.com/Flexolotl553862/Note-archive.git" aria-label="GitHub" data-social="github">
+                            <a href="https://github.com/Flexolotl553862/Note-archive.git" aria-label="GitHub"
+                               data-social="github">
                                 <div class="filled"></div>
                                 <svg
                                         xmlns="http://www.w3.org/2000/svg"
