--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -36,8 +36,9 @@
                      class="dropdown-menu z-50 hidden my-4 text-base list-none bg-gray-700 divide-y divide-gray-500 rounded-lg shadow-sm dark:bg-gray-700 dark:divide-gray-600"
                      id="user-dropdown">
                     <div class="px-4 py-3">
-                        <span class="block text-sm text-white" th:text="${#authentication.getName()}">Bonnie Green</span>
-                        <span class="block text-sm text-gray-400 truncate" th:text="${#authentication.principal.email}">name@flowbite.com</span>
+                        <span class="block text-sm text-white" th:text="${#authentication.getName()}"></span>
+                        <span class="block text-sm text-gray-400 truncate"
+                              th:text="${#authentication.principal.email}"></span>
                     </div>
                     <ul class="py-2" aria-labelledby="user-menu-button">
                         <li>
@@ -51,7 +52,8 @@
 
                 <button data-collapse-toggle="navbar-user" type="button"
                         class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-                        aria-controls="navbar-user" aria-expanded="false">
+                        data-drawer-target="navigation-sidebar" data-drawer-show="navigation-sidebar"
+                        aria-controls="navigation-sidebar">
                     <span class="sr-only">Open main menu</span>
                     <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                          viewBox="0 0 17 14">
@@ -61,7 +63,7 @@
                 </button>
             </div>
 
-            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-user">
+            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1">
                 <ul class="flex flex-col font-bold text-lg p-4 bg-gray-700 md:bg-transparent md:p-0 mt-4 border-2 border-gray-700 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                     <li>
                         <a href="/home"
@@ -86,6 +88,93 @@
                            class="block py-2 px-3 text-white rounded-md hover:bg-gray-500 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
                             Add note
                         </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- sidebar -->
+        <div id="navigation-sidebar"
+             class="fixed top-0 left-0 z-40 w-64 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-gray-800"
+             tabindex="-1" aria-labelledby="drawer-navigation-label">
+            <div th:replace="~{fragments/logo}"></div>
+            <button type="button" data-drawer-hide="navigation-sidebar" aria-controls="navigation-sidebar"
+                    class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 absolute top-2.5 end-2.5 inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white">
+                <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                          clip-rule="evenodd"></path>
+                </svg>
+                <span class="sr-only">Close menu</span>
+            </button>
+            <div class="py-4 overflow-y-auto">
+                <ul class="space-y-2 font-medium">
+                    <li>
+                        <a href="/home"
+                           class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group">
+                            <svg class="shrink-0 w-6 h-6 transition duration-75 text-gray-400 group-hover:text-white"
+                                 aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                 fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                      stroke-width="2"
+                                      d="m4 12 8-8 8 8M6 10.5V19a1 1 0 0 0 1 1h3v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h3a1 1 0 0 0 1-1v-8.5"/>
+                            </svg>
+                            <span class="flex-1 ms-3 whitespace-nowrap">Home</span>
+                        </a>
+                    </li>
+                    <li sec:authorize="isAnonymous()">
+                        <a href="/login"
+                           class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group">
+                            <svg class="shrink-0 w-5 h-5 transition duration-75 text-gray-400 group-hover:text-white"
+                                 aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 16">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                      stroke-width="2"
+                                      d="M1 8h11m0 0L8 4m4 4-4 4m4-11h3a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-3"/>
+                            </svg>
+                            <span class="flex-1 ms-3 whitespace-nowrap">Sign In</span>
+                        </a>
+                    </li>
+                    <li th:if="${user != null && (user.role.name == 'ROLE_WRITER' || user.role.name == 'ROLE_ADMIN')}">
+                        <a href="/my/notes"
+                           class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group">
+                            <svg class="shrink-0 w-6 h-6 transition duration-75 text-gray-400 group-hover:text-white"
+                                 aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                 fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                      stroke-width="2"
+                                      d="M15 4h3a1 1 0 0 1 1 1v15a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1h3m0 3h6m-3 5h3m-6 0h.01M12 16h3m-6 0h.01M10 3v4h4V3h-4Z"/>
+                            </svg>
+                            <span class="flex-1 ms-3 whitespace-nowrap">My notes</span>
+                        </a>
+                    </li>
+                    <li th:if="${user != null && (user.role.name == 'ROLE_WRITER' || user.role.name == 'ROLE_ADMIN')}">
+                        <a href="/add/note"
+                           class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group">
+                            <svg class="shrink-0 w-6 h-6 transition duration-75 text-gray-400 group-hover:text-white"
+                                 aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                 fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                      stroke-width="2"
+                                      d="m4.988 19.012 5.41-5.41m2.366-6.424 4.058 4.058-2.03 5.41L5.3 20 4 18.701l3.355-9.494 5.41-2.029Zm4.626 4.625L12.197 6.61 14.807 4 20 9.194l-2.61 2.61Z"/>
+                            </svg>
+                            <span class="flex-1 ms-3 whitespace-nowrap">Add note</span>
+                        </a>
+                    </li>
+                    <li sec:authorize="isAuthenticated()">
+                        <form th:action="@{/logout}" method="post">
+                            <button type="submit"
+                                    class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group">
+                                <svg class="shrink-0 w-6 h-6 transition duration-75 text-gray-400 group-hover:text-white"
+                                     aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                     fill="none" viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                          stroke-width="2"
+                                          d="M20 12H8m12 0-4 4m4-4-4-4M9 4H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h2"/>
+                                </svg>
+                                <span class="flex-1 ms-3 whitespace-nowrap">Sign out</span>
+                            </button>
+                        </form>
                     </li>
                 </ul>
             </div>
