--- a/src/main/resources/templates/fragments/nothing-here.html
+++ b/src/main/resources/templates/fragments/nothing-here.html
@@ -1,11 +1,11 @@
-<div th:fragment="nothing-here(title, text, linkMsg, link)">
+<div th:fragment="nothing-here(title, text, linkMsg, link)" class="mx-auto">
     <link rel="stylesheet" th:href="@{/css/nothing-here.css}">
     <style>
         .nothing-here {
             background-color: rgba(40, 40, 50, 0.85);
         }
     </style>
-    <div class="nothing-here max-w-sm p-6 border rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+    <div class="nothing-here max-w-sm p-6 border rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 mx-auto">
         <div class="loader">
             <div class="loaderMiniContainer">
                 <div class="barContainer">
