--- a/src/main/resources/templates/fragments/note-table.html
+++ b/src/main/resources/templates/fragments/note-table.html
@@ -1,4 +1,4 @@
-<div th:fragment="note-table" id="note-table" class="mx-auto w-[85%]">
+<div th:fragment="note-table" id="note-table" class="w-[85%] mx-auto">
     <div class="relative overflow-x-auto shadow-md rounded-lg mb-[3rem]">
         <style>
             @media (max-width: 640px) {
@@ -7,7 +7,7 @@
                 }
             }
         </style>
-        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <table th:if="${!notes.isEmpty()}" class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
             <thead class="bg-gray-700 text-xs uppercase text-white">
             <tr>
                 <th scope="col" class="px-6 py-3">
@@ -44,9 +44,15 @@
                 <!-- download and delete buttons -->
                 <td class="py-4 text-right">
                     <div class="flex justify-end">
-                        <a th:href="${'/edit/note/' + note.id}">
+                        <a th:href="${'/note/' + note.id + '/links'}">
                             <svg class="w-6 h-6 text-white mr-2 hover:text-blue-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m14.304 4.844 2.852 2.852M7 7H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-4.5m2.409-9.91a2.017 2.017 0 0 1 0 2.853l-6.844 6.844L8 14l.713-3.565 6.844-6.844a2.015 2.015 0 0 1 2.852 0Z"/>
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.213 9.787a3.391 3.391 0 0 0-4.795 0l-3.425 3.426a3.39 3.39 0 0 0 4.795 4.794l.321-.304m-.321-4.49a3.39 3.39 0 0 0 4.795 0l3.424-3.426a3.39 3.39 0 0 0-4.794-4.795l-1.028.961"/>
+                            </svg>
+                        </a>
+
+                        <a th:href="${'/note/' + note.id + '/editors'}">
+                            <svg class="w-6 h-6 text-white mr-2 hover:text-blue-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                                <path fill-rule="evenodd" d="M12 6a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm-1.5 8a4 4 0 0 0-4 4 2 2 0 0 0 2 2h7a2 2 0 0 0 2-2 4 4 0 0 0-4-4h-3Zm6.82-3.096a5.51 5.51 0 0 0-2.797-6.293 3.5 3.5 0 1 1 2.796 6.292ZM19.5 18h.5a2 2 0 0 0 2-2 4 4 0 0 0-4-4h-1.1a5.503 5.503 0 0 1-.471.762A5.998 5.998 0 0 1 19.5 18ZM4 7.5a3.5 3.5 0 0 1 5.477-2.889 5.5 5.5 0 0 0-2.796 6.293A3.501 3.501 0 0 1 4 7.5ZM7.1 12H6a4 4 0 0 0-4 4 2 2 0 0 0 2 2h.5a5.998 5.998 0 0 1 3.071-5.238A5.505 5.505 0 0 1 7.1 12Z" clip-rule="evenodd"/>
                             </svg>
                         </a>
 
