--- a/src/main/resources/templates/fragments/delete-modal.html
+++ b/src/main/resources/templates/fragments/delete-modal.html
@@ -1,7 +1,7 @@
-<div th:fragment="delete-modal">
+<div th:fragment="delete-modal(link)">
     <!-- delete modal -->
     <div id="delete-modal" tabindex="-1"
-         class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+         class="modal hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
         <div class="relative p-4 w-full max-w-md max-h-full">
 
             <!-- gradient-border -->
@@ -12,7 +12,8 @@
                     <!-- Modal content -->
                     <div class="relative rounded-xl shadow-sm">
                         <button type="button"
-                                class="modal-delete-hide absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-600 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center hover:text-white">
+                                class="modal-hide absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-600 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center hover:text-white"
+                                data-modal="delete-modal">
                             <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                                  viewBox="0 0 14 14">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -29,16 +30,19 @@
                                       stroke-width="2"
                                       d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"/>
                             </svg>
-                            <h3 id="delete-msg" class="mb-5 text-lg font-normal text-gray-300"></h3>
-                            <form id="sure-to-delete" th:action="@{/delete/note}" class="inline-flex items-center"
-                                  method="post">
+                            <h3 id="delete-modal-msg" class="mb-5 text-lg font-normal text-gray-300"></h3>
+                            <form id="sure-to-delete" th:action="${link}"
+                                  class="modal-form inline-flex items-center"
+                                  method="post" data-modal="delete-modal">
+                                <input type="hidden" name="noteId">
                                 <button type="submit"
                                         class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                                     Yes, I'm sure
                                 </button>
                             </form>
                             <button type="button"
-                                    class="modal-delete-hide py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                                    class="modal-hide py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+                                    data-modal="delete-modal">
                                 No, cancel
                             </button>
                         </div>
