--- a/src/main/resources/templates/fragments/modals.html
+++ b/src/main/resources/templates/fragments/modals.html
@@ -1,7 +1,7 @@
 <div th:fragment="modals">
     <!-- delete modal -->
     <div id="delete-modal" tabindex="-1"
-         class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+         class="modal hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
         <div class="relative p-4 w-full max-w-md max-h-full">
 
             <!-- gradient-border -->
@@ -12,7 +12,8 @@
                     <!-- Modal content -->
                     <div class="relative rounded-xl shadow-sm">
                         <button type="button"
-                                class="modal-delete-hide absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-600 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center hover:text-white">
+                                class="modal-hide absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-600 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center hover:text-white"
+                                data-modal="delete-modal">
                             <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                                  viewBox="0 0 14 14">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -29,16 +30,20 @@
                                       stroke-width="2"
                                       d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"/>
                             </svg>
-                            <h3 id="delete-msg" class="mb-5 text-lg font-normal text-gray-300"></h3>
-                            <form id="sure-to-delete" th:action="@{/delete/entry}" class="inline-flex items-center"
-                                  method="post">
+                            <h3 id="delete-modal-msg" class="mb-5 text-lg font-normal text-gray-300"></h3>
+                            <form id="sure-to-delete" th:action="@{/delete/entry}"
+                                  class="modal-form inline-flex items-center"
+                                  method="post" data-modal="delete-modal">
+                                <input type="hidden" name="entryId">
+                                <input type="hidden" name="entryName">
                                 <button type="submit"
                                         class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                                     Yes, I'm sure
                                 </button>
                             </form>
                             <button type="button"
-                                    class="modal-delete-hide py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                                    class="modal-hide py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+                                    data-modal="delete-modal">
                                 No, cancel
                             </button>
                         </div>
@@ -53,7 +58,7 @@
 
 <!-- directory modal -->
 <div id="directory-modal" tabindex="-1" aria-hidden="true"
-     class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+     class="modal hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
     <div class="relative p-4 w-full max-w-md max-h-full">
 
         <!-- gradient-border -->
@@ -69,7 +74,8 @@
                             New Directory
                         </h3>
                         <button type="button"
-                                class="modal-directory-hide text-gray-400 bg-transparent rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center hover:bg-gray-600 hover:text-white">
+                                class="modal-hide text-gray-400 bg-transparent rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center hover:bg-gray-600 hover:text-white"
+                                data-modal="directory-modal">
                             <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                                  viewBox="0 0 14 14">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -81,7 +87,7 @@
                     </div>
                     <!-- Modal body -->
                     <form th:object="${createDirectoryForm}" th:action="@{/folder/create}" method="post"
-                          class="p-4 md:p-5" id="directory-form">
+                          class="modal-form p-4 md:p-5" id="directory-form" data-modal="directory-modal">
                         <div class="mb-5"
                              th:insert="~{fragments/form-field :: form-field('directoryName', 'Directory name', 'text', '')}"></div>
 
@@ -109,7 +115,7 @@
 
 <!-- file modal -->
 <div id="file-modal" tabindex="-1" aria-hidden="true"
-     class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+     class="modal hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
     <div class="relative p-4 w-full max-w-md max-h-full">
 
         <!-- gradient-border -->
@@ -125,7 +131,8 @@
                             Add File
                         </h3>
                         <button type="button"
-                                class="modal-file-hide text-gray-400 bg-transparent rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center hover:bg-gray-600 hover:text-white">
+                                class="modal-hide text-gray-400 bg-transparent rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center hover:bg-gray-600 hover:text-white"
+                                data-modal="file-modal">
                             <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                                  viewBox="0 0 14 14">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -136,11 +143,13 @@
                         </button>
                     </div>
                     <!-- Modal body -->
-                    <form th:action="@{/file/create}" th:object="${fileForm}" method="post" class="p-4 md:p-5"
-                          id="file-form">
-                        <div class="mb-5" th:insert="~{fragments/file-input :: file-input('fileCreate', 'upload a file. Maximal size is 500 Mb.')}"></div>
+                    <form th:action="@{/file/create}" th:object="${fileForm}" method="post" class="modal-form p-4 md:p-5"
+                          id="file-form" data-modal="file-modal">
+                        <div class="mb-5"
+                             th:insert="~{fragments/file-input :: file-input('fileCreate', 'upload a file. Maximal size is 500 Mb.')}"></div>
 
-                        <div class="hidden" th:insert="~{fragments/form-field :: form-field('fileParentId', 'Parent id', 'number', '')}"></div>
+                        <div class="hidden"
+                             th:insert="~{fragments/form-field :: form-field('fileParentId', 'Parent id', 'number', '')}"></div>
                         <button id="new-file-create"
                                 class="text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                             <svg class="me-1 -ms-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
