--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -77,13 +77,13 @@
                             Sign in
                         </a>
                     </li>
-                    <li th:if="${user != null && (user.role.name == 'ROLE_WRITER' || user.role.name == 'ROLE_ADMIN')}">
+                    <li sec:authorize="hasAnyRole('ADMIN', 'WRITER')">
                         <a href="/my/notes"
                            class="block py-2 px-3 text-white rounded-md hover:bg-gray-500 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
                             My notes
                         </a>
                     </li>
-                    <li th:if="${user != null && (user.role.name == 'ROLE_WRITER' || user.role.name == 'ROLE_ADMIN')}">
+                    <li sec:authorize="hasAnyRole('ADMIN', 'WRITER')">
                         <a href="/add/note"
                            class="block py-2 px-3 text-white rounded-md hover:bg-gray-500 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
                             Add note
