--- a/src/main/resources/templates/fragments/renew-link-modal.html
+++ b/src/main/resources/templates/fragments/renew-link-modal.html
@@ -1,4 +1,4 @@
-<div th:fragment="new-link-modal" id="link-modal" tabindex="-1" aria-hidden="true"
+<div th:fragment="renew-link-modal" id="renew-link-modal" tabindex="-1" aria-hidden="true"
      class="modal hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
     <div class="relative p-4 w-full max-w-[23rem] max-h-full">
 
@@ -12,11 +12,11 @@
                     <!-- Modal header -->
                     <div class="flex items-center justify-between p-4 border-b rounded-t border-gray-700">
                         <h3 class="text-lg font-semibold text-white">
-                            New Link
+                            Renew Link
                         </h3>
                         <button type="button"
                                 class="modal-hide text-gray-400 bg-transparent rounded-lg text-sm h-8 w-8 ms-auto inline-flex justify-center items-center hover:bg-gray-600 hover:text-white"
-                                data-modal="link-modal">
+                                data-modal="renew-link-modal">
                             <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                                  viewBox="0 0 14 14">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -27,8 +27,8 @@
                     </div>
                     <!-- Modal body -->
                     <div class="p-4 pt-0">
-                        <form th:action="@{/generate/link}" method="post" th:object="${linkForm}"
-                              class="modal-form" data-modal="link-modal">
+                        <form th:action="@{/renew/link}" method="post" th:object="${renewLinkForm}"
+                              class="modal-form" data-modal="renew-link-modal">
                             <div class="grid gap-4 grid-cols-2 sm:gap-4">
                                 <div class="w-full">
                                     <div th:replace="~{fragments/form-field :: form-field('expiryDate', 'Expiry Date', 'date', 'save-input')}"></div>
@@ -36,16 +36,13 @@
                                 <div class="w-full">
                                     <div th:replace="~{fragments/form-field :: form-field('expiryTime', 'Expiry time', 'time', 'save-input')}"></div>
                                 </div>
-                                <div class="col-span-2">
-                                    <div th:replace="~{fragments/form-field :: form-field('description', 'Description', 'text', 'save-input')}"></div>
-                                </div>
                                 <div class="col-span-2 hidden">
-                                    <div th:replace="~{fragments/form-field :: form-field('noteId', 'Note id', 'number', '')}"></div>
+                                    <div th:replace="~{fragments/form-field :: form-field('linkId', 'Link id', 'number', '')}"></div>
                                 </div>
                             </div>
                             <button type="submit"
                                     class="inline-flex w-full items-center justify-center px-5 py-2.5 mt-4 text-sm font-medium text-center text-white bg-blue-700 rounded-lg dark:focus:ring-primary-900 hover:bg-blue-800">
-                                Create
+                                Renew
                             </button>
                         </form>
                     </div>
