--- a/src/main/resources/templates/note-links.html
+++ b/src/main/resources/templates/note-links.html
@@ -22,44 +22,148 @@
 
     <div th:replace="~{fragments/new-link-modal}"></div>
 
+    <div th:replace="~{fragments/renew-link-modal}"></div>
+
+    <!-- delete modal -->
+    <div id="delete-modal" tabindex="-1"
+         class="modal hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+        <div class="relative p-4 w-full max-w-md max-h-full">
+
+            <!-- gradient-border -->
+            <div th:fragment="gradient-border" class="card md:max-w-xl mx-auto md:mb-[2.5rem]">
+                <link rel="stylesheet" href="/css/gradient-border.css">
+                <div class="card-info">
+
+                    <!-- Modal content -->
+                    <div class="relative rounded-xl shadow-sm">
+                        <button type="button"
+                                class="modal-hide absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-600 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center hover:text-white"
+                                data-modal="delete-modal">
+                            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                 viewBox="0 0 14 14">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                      stroke-width="2"
+                                      d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                            </svg>
+                            <span class="sr-only">Close modal</span>
+                        </button>
+                        <div class="p-4 md:p-5 text-center">
+                            <svg class="w-12 h-12 text-white mx-auto mb-4" aria-hidden="true"
+                                 xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                 viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                      stroke-width="2"
+                                      d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"/>
+                            </svg>
+                            <h3 id="delete-modal-msg" class="mb-5 text-lg font-normal text-gray-300"></h3>
+                            <form id="sure-to-delete" th:action="@{/delete/link}"
+                                  class="modal-form inline-flex items-center"
+                                  method="post" data-modal="delete-modal">
+                                <input type="hidden" name="linkId">
+                                <button type="submit"
+                                        class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                                    Yes, I'm sure
+                                </button>
+                            </form>
+                            <button type="button"
+                                    class="modal-hide py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+                                    data-modal="delete-modal">
+                                No, cancel
+                            </button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <style>
+        @media (max-width: 640px) {
+            .desktop-only {
+                display: none;
+            }
+        }
+    </style>
     <div class="mx-auto w-[85%]">
         <div class="relative overflow-x-auto shadow-md rounded-lg mb-[3rem]">
-<!--            <form th:action="@{/change/links}" method="post">-->
-                <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
-                       id="default-table">
-                    <thead class="bg-gray-700 text-xs uppercase text-white">
-                    <tr>
-                        <th scope="col" class="px-6 py-3">
-                            For
-                        </th>
-                        <th scope="col" class="px-6 py-3">
-                            Expiry date
-                        </th>
-                        <th scope="col" class="flex justify-end px-6 py-3 items-center">
-                            Link
-                            <button id="new-file-create" data-modal-target="timepicker-modal" data-modal-toggle="timepicker-modal"
-                                    class="text-white ml-6">
-                                <svg class="-ms-1 w-5 h-5 bg-blue-600 rounded-md hover:bg-blue-700" fill="currentColor" viewBox="0 0 20 20"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd"
-                                          d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
-                                          clip-rule="evenodd"></path>
-                                </svg>
-                            </button>
-                        </th>
-                    </tr>
-                    </thead>
+            <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+                   id="default-table">
+                <thead class="bg-gray-700 text-xs uppercase text-white">
+                <tr>
+                    <th scope="col" class="px-6 py-3">
+                        Description
+                    </th>
+                    <th scope="col" class="px-6 py-3 desktop-only">
+                        Expiry date
+                    </th>
+                    <th scope="col" class="flex justify-end px-6 py-3 items-center">
+                        Link
+                        <button id="new-file-create"
+                                class="modal-show text-white ml-6" data-modal="link-modal"
+                                th:attr="data-noteid=${noteId}">
+                            <svg class="-ms-1 w-5 h-5 bg-blue-600 rounded-md hover:bg-blue-700" fill="currentColor"
+                                 viewBox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
+                                      clip-rule="evenodd"></path>
+                            </svg>
+                        </button>
+                    </th>
+                </tr>
+                </thead>
 
-                    <tbody>
+                <tbody>
 
-                    <tr th:each="link, iter : ${links}"
-                        th:class="${iter.last} ?
+                <tr th:each="link, iter : ${links}"
+                    th:class="${iter.last} ?
                 'even:bg-gray-800 odd:bg-gray-900' :
                 'border-b even:bg-gray-800 odd:bg-gray-900 border-gray-700' ">
-                    </tr>
-                    </tbody>
-                </table>
-<!--            </form>-->
+
+                    <th scope="row" class="px-6 py-4 font-normal text-white">
+                            <span class="text-white font-medium text-md"
+                                  th:text="${link.description}"></span>
+                    </th>
+
+                    <td class="px-6 font-normal text-white desktop-only">
+                        <div class="inline-flex px-4 py-2 shadow-sm flex items-center gap-2 text-gray-200">
+                            <svg class="w-5 h-5 text-blue-500" fill="currentColor" viewBox="0 0 20 20">
+                                <path d="M6 2a1 1 0 00-1 1v1H5a2 2 0 00-2 2v10a2 2 0
+                                002 2h10a2 2 0 002-2V6a2 2 0
+                                00-2-2h-.05V3a1 1 0 10-2 0v1H7V3a1
+                                1 0 00-1-1zM5 8h10v8H5V8z"/>
+                            </svg>
+                            <span class="font-medium" th:text="${#dates.format(link.expiryDate, 'dd-MM-yyyy HH:mm')}"></span>
+                        </div>
+                    </td>
+
+                    <td class="py-4 flex justify-end px-6 gap-2">
+                        <div th:insert="~{fragments/copy :: copy(${link.link}, ${link.id})}" class="flex items-center"></div>
+                        <button class="modal-show flex items-center justify-end" data-modal="renew-link-modal"
+                                th:attr="data-linkId=${link.id}">
+                            <svg class="w-5 h-5 text-white hover:text-blue-600" aria-hidden="true"
+                                 xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                 viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                      stroke-width="2"
+                                      d="M12 8v4l3 3M3.22302 14C4.13247 18.008 7.71683 21 12 21c4.9706 0 9-4.0294 9-9 0-4.97056-4.0294-9-9-9-3.72916 0-6.92858 2.26806-8.29409 5.5M7 9H3V5"/>
+                            </svg>
+                        </button>
+                        <button class="modal-show flex items-center justify-end" data-modal="delete-modal"
+                                th:attr="data-linkId=${link.id}, data-message=${'Are you sure you want to delete this link?'}">
+                            <svg class="w-5 h-5 text-red-500 hover:text-red-900" aria-hidden="true"
+                                 xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                 viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                      stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6"/>
+                            </svg>
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </main>
@@ -67,5 +171,7 @@
 <div th:replace="~{fragments/footer}"></div>
 <script src="/assets/flowbite.min.js"></script>
 <script src="/js/clear-errors.js"></script>
+<script src="/js/modals.js"></script>
+<script src="/js/copy.js"></script>
 </body>
 </html>
